# NMMedia

./: CMakeLists.txt  README.md  downloader.cpp  downloader.h  main.cpp  mediamanager.cpp  mediamanager.h  nmmediaparser.cpp  nmmediaparser.h  parsedpost.cpp  parsedpost.h  publicationbot.cpp  publicationbot.h
configs/: config.ini
